--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <div>
-  <h1>Hello, {{ title }}</h1>
+  <app-navbar></app-navbar>
+  <div class="container">
+    <app-home></app-home>
+    <app-about></app-about>
+    <app-skills></app-skills>
+    <app-cards></app-cards>
+    <app-footer></app-footer>
+  </div>
 </div>
