upload home page

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<div class="card bg-dark text-white border-0 rounded-0">
+  <img
+    src="images/details.jpg"
+    class="card-img object-fit-cover"
+    alt="Card image"
+    style="height: 800px;"
+  />
+  <div class="card-img-overlay">
+    <div
+      class="mx-lg-4"
+      style="position: absolute; top: 50%; transform: translateY(-50%);"
+    >
+      <h1 class="card-title display-1" style="font-weight: bold;">Hazem Ahmed</h1>
+      <hr />
+      <p class="card-text display-6 mb-4">Web Developer & Software Engineer</p>
+      <button
+        class="btn btn-outline-light rounded-0"
+        style="position: absolute; left: 50%; transform: translateX(-50%); width: 150px; height: 45px;"
+      >
+        CONTACT ME
+      </button>
+    </div>
+  </div>
+</div>
