upload the other sections

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,26 @@
-<p>about works!</p>
+<div class="row my-5 g-0 border-0">
+  <div class="col-lg-4 col-md-12 rounded-0 border-0 card ">
+    <div class="card-body mx-auto">
+      <h5 class="display-4 text-center" style="font-weight: bold">About Me</h5>
+      <img src="images/personal.jpg" class="about " alt="Personal img" style="width: 300px; padding-right: 5px;
+        margin-top: 10px;" />
+    </div>
+  </div>
+  <div class="col-lg-8 col-md-12 rounded-0 border-0 card">
+    <div class="card-body ms-4 mt-5 ps-5">
+      <p class="card-text pt-5 ">
+        With supporting text below as a natural lead-in to additional content.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quo
+        eligendi omnis eos necessitatibus officia rerum ex earum! Et quo facilis
+        dolorum quos nulla error nesciunt harum architecto impedit molestiae.
+        With supporting text below as a natural lead-in to additional content.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quo
+        eligendi omnis eos necessitatibus officia rerum ex earum! Et quo facilis
+        dolorum quos nulla error nesciunt harum architecto impedit molestiae.
+      </p>
+      <button class="btn btn-dark rounded-0 border-0 mt-3" style="width: 200px; height: 45px">
+        Download Resume
+      </button>
+    </div>
+  </div>
+</div>
