--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -1,1 +1,62 @@
-<p>cards works!</p>
+<h1 class="container mt-5 mx-auto">Portfolio</h1>
+<div class="row my-5 text-center container mx-auto">
+  <div class="card bg-dark text-white" style="width: 400px; height: 250px">
+    <div
+      class="card-body"
+      style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)"
+    >
+      <h2 class="display-6 text-center" style="width: 300px">WEB DESIGN</h2>
+      <hr />
+    </div>
+  </div>
+
+  <div class="card bg-secondary text-white" style="width: 400px; height: 250px">
+    <div
+      class="card-body"
+      style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)"
+    >
+      <h2 class="display-6 text-center" style="width: 300px">MOBILE DESIGN</h2>
+      <hr />
+    </div>
+  </div>
+
+  <div class="card bg-dark text-white" style="width: 400px; height: 250px">
+    <div
+      class="card-body"
+      style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)"
+    >
+      <h2 class="display-6 text-center" style="width: 300px">LOGO DESIGN</h2>
+      <hr />
+    </div>
+  </div>
+
+  <div class="card bg-secondary text-white" style="width: 400px; height: 250px">
+    <div
+      class="card-body"
+      style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)"
+    >
+      <h2 class="display-6 text-center" style="width: 300px">WEB DEVELOPMENT</h2>
+      <hr />
+    </div>
+  </div>
+
+  <div class="card bg-dark text-white" style="width: 400px; height: 250px">
+    <div
+      class="card-body"
+      style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)"
+    >
+      <h2 class="display-6 text-center" style="width: 300px">MOBILE DEVELOPMENT</h2>
+      <hr />
+    </div>
+  </div>
+
+  <div class="card bg-secondary text-white" style="width: 400px; height: 250px">
+    <div
+      class="card-body"
+      style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%)"
+    >
+      <h2 class="display-6 text-center" style="width: 300px">PWA DEVELOPMENT</h2>
+      <hr />
+    </div>
+  </div>
+</div>
