--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,30 @@
-<p>footer works!</p>
+<footer class="g-0 bg-dark text-white">
+  <div style="background-color: rgba(0, 0, 0, 0.2)">
+    <div class="row py-4 mx-auto container">
+      <div class="text-center col-lg-4">
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">Links</h5>
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#" class="text-white">Facebook</a>
+            </li>
+            <li>
+              <a href="#" class="text-white">LinkedIn</a>
+            </li>
+            <li>
+              <a href="#" class="text-white">GitHub</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="text-center my-auto col-lg-4">
+        <button class="btn btn-outline-light rounded-0 col-lg-4" style="width: 150px; height: 45px">
+          CONTACT ME
+        </button>
+      </div>
+      <div class="text-center my-auto col-lg-4">
+        © 2024 Copyright: Hazem Ahmed
+      </div>
+    </div>
+  </div>
+</footer>
