--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,1 +1,136 @@
-<p>skills works!</p>
+<div class="card bg-dark text-white mb-2 rounded-0 border-0">
+  <div class="card-body text-center w-50 mx-auto my-5">
+    <h1>Skills</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quo
+      eligendi omnis eos necessitatibus officia rerum ex earum! Et quo facilis
+      dolorum quos nulla error nesciunt harum architecto impedit molestiae.
+    </p>
+  </div>
+  <div class="row mb-5 g-0">
+    <div class="col-lg-3 mx-auto text-center">
+      <h2>MY FOCUS</h2>
+      <hr class="mx-auto bg-white" style="width: 250px; height: 5px" />
+      <h3>UI/UX</h3>
+      <h3>Responsive Design</h3>
+      <h3>Web Design</h3>
+      <h3>Mobile App Design</h3>
+    </div>
+    <div class="col-lg-9 w-50 mx-auto">
+      <div class="row my-3">
+        <h3
+          class="col-lg-3 bg-light text-dark my-auto text-center mx-auto"
+          style="height: 40px"
+        >
+          HTML
+        </h3>
+        <div class="col-lg-9 bg-white p-0 border-0 my-auto rounded-0 my-3 mx-auto">
+          <div class="progress" style="height: 40px">
+            <div
+              class="progress-bar bg-secondary"
+              role="progressbar"
+              style="width: 90%"
+              aria-valuenow="90"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row my-3">
+        <h3
+          class="col-lg-3 bg-light text-dark my-auto text-center mx-auto"
+          style="height: 40px"
+        >
+          CSS
+        </h3>
+        <div class="col-lg-9 bg-white p-0 border-0 my-auto rounded-0 my-3 mx-auto">
+          <div class="progress" style="height: 40px">
+            <div
+              class="progress-bar bg-secondary"
+              role="progressbar"
+              style="width: 90%"
+              aria-valuenow="90"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              90%
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row my-3">
+        <h3
+          class="col-lg-3 bg-light text-dark my-auto text-center mx-auto"
+          style="height: 40px"
+        >
+          JS
+        </h3>
+        <div class="col-lg-9 bg-white p-0 border-0 my-auto rounded-0 my-3 mx-auto">
+          <div class="progress" style="height: 40px">
+            <div
+              class="progress-bar bg-secondary"
+              role="progressbar"
+              style="width: 80%"
+              aria-valuenow="80"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              80%
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row my-3">
+        <h3
+          class="col-lg-3 bg-light text-dark my-auto text-center mx-auto"
+          style="height: 40px"
+        >
+          Bootstrap
+        </h3>
+        <div class="col-lg-9 bg-white p-0 border-0 my-auto rounded-0 my-3 mx-auto">
+          <div class="progress" style="height: 40px">
+            <div
+              class="progress-bar bg-secondary"
+              role="progressbar"
+              style="width: 85%"
+              aria-valuenow="85"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              85%
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row my-3">
+        <h3
+          class="col-lg-3 bg-light text-dark my-auto text-center mx-auto"
+          style="height: 40px"
+        >
+          React
+        </h3>
+        <div class="col-lg-9 bg-white p-0 border-0 my-auto rounded-0 my-3 mx-auto">
+          <div class="progress" style="height: 40px">
+            <div
+              class="progress-bar bg-secondary"
+              role="progressbar"
+              style="width: 75%"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              75%
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
